# haskell-hash-ed2k

./: COPYING  hash-ed2k.cabal
Benchmark/: Generate.hs  Lazy.hs  LazyMD4.hs  Strict.hs  StrictMD4.hs
Crypto/Hash/: Ed2k.hs
Test/: Ed2k.hs
